Added Playstation USB instruments to Kamek - possibly works.
git-svn-id: svn://japaneatahand.com/rawksd/trunk@170 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/rawksd/kamek/hacks.yaml
+++ b/rawksd/kamek/hacks.yaml
@@ -19,6 +19,13 @@ hooks:
     addr_pal:   0x80348EA0
     data:       '4E800020' # blr
 
+-   name:           'Playstation USB Instruments'
+    type:           branch_insn
+    branch_type:    bl
+    src_addr_ntsc:  0x804AB34C
+    src_addr_pal:   0x804AC508
+    target_func:    'UsbTypeHook'
+
 -   name:       'Harmless Hopos'
     type:       patch
     addr_ntsc:  0x8027273C
