--- a/consolehaxx/Minitools/Graceful/Graceful.csproj
+++ b/consolehaxx/Minitools/Graceful/Graceful.csproj
@@ -40,6 +40,7 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
