obfuscate IOS module blobs in memory write state.dat when powering off so discs can be ejected properly
git-svn-id: svn://japaneatahand.com/rawksd/trunk@189 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/stripios/Makefile
+++ b/stripios/Makefile
@@ -1,5 +1,5 @@
-stripios.exe:stripios.cpp
-	g++ stripios.cpp -o stripios.exe
+stripios.exe: stripios.cpp rijndael.cpp
+	g++ stripios.cpp rijndael.cpp -o stripios.exe
 clean:
 	@echo "clean ..."
 	@rm -f stripios.exe
