improve .bin file header parsing stability
git-svn-id: svn://japaneatahand.com/rawksd/trunk@208 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/rawkaudio/libvorbis_static.vcproj
+++ b/rawkaudio/libvorbis_static.vcproj
@@ -340,6 +340,8 @@
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
 				BufferSecurityCheck="false"
+				EnableEnhancedInstructionSet="0"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
 				Detect64BitPortabilityProblems="false"
