ELF format changes for IOS compatibility bump riiv version nandloader got The Boot(TM) remove unneeded tabs in rawksd patch templates
git-svn-id: svn://japaneatahand.com/rawksd/trunk@214 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/launcher/Makefile
+++ b/launcher/Makefile
@@ -111,7 +111,7 @@ run: $(BUILD)
 	@wiiload $(OUTPUT).dol
 
 z: $(BUILD)
-	@./dollz3/dollz3 $(OUTPUT).dol $(OUTPUT).z.dol
+	@./dollz3/dollz3 $(OUTPUT).dol $(OUTPUT).z.dol -m
 	@./dollz3/dol2elf $(OUTPUT).z.dol boot.elf
 	@cp boot.elf hbc/apps/riivolution/boot.elf
 	@cd hbc/apps; zip -D riiv.zip riivolution/*
