--- a/consolehaxx/ConsoleHaxx.Wii/ConsoleHaxx.Wii.csproj
+++ b/consolehaxx/ConsoleHaxx.Wii/ConsoleHaxx.Wii.csproj
@@ -48,6 +48,10 @@
     <Compile Include="PixelFormats\CI8.cs" />
     <Compile Include="PixelFormats\CMPR.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="PixelFormats\TiledARGB.cs" />
+    <Compile Include="PixelFormats\NullEncoding.cs" />
+    <Compile Include="PixelFormats\DXT1.cs" />
+    <Compile Include="PixelFormats\DXT5.cs" />
     <Compile Include="PixelFormats\I4.cs" />
     <Compile Include="PixelFormats\I8.cs" />
     <Compile Include="PixelFormats\IA4.cs" />
@@ -59,6 +63,7 @@
     <Compile Include="Disc.cs" />
     <Compile Include="DlcBin.cs" />
     <Compile Include="NUS.cs" />
+    <Compile Include="PixelFormats\ARGB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rarc.cs" />
     <Compile Include="Savegame.cs" />
