--- a/rawksd/kamek/riiv_ntsc.template
+++ b/rawksd/kamek/riiv_ntsc.template
@@ -14,6 +14,9 @@
 <choice name="On"><patch id="leaderboard_enable" /></choice>
 <choice name="Off"><patch id="leaderboard_disable" /></choice>
 </option>
+<option name="vidflip" default="0">
+<choice name="Enabled"><patch id="vid_flip" /></choice>
+</option>
 </section>
 </options>
 <patch id="ntsc_splash">
@@ -24,4 +27,9 @@
 </patch>
 <patch id="leaderboard_disable">
 <memory offset="0x80002FFC" value="00000000" />
+</patch>
+<patch id="vid_flip">
+<memory offset="0x805C2B14" value="281D000E" />
+<memory offset="0x80590CF8" value="4BA70A08" />
+<memory offset="0x80001700" value="8062A568EC21182AEC42202AFC601850FC8020504858F5E8" />
 </patch>
