add unused ssl powerpc interface
git-svn-id: svn://japaneatahand.com/rawksd/trunk@234 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/rawksd/Makefile
+++ b/rawksd/Makefile
@@ -28,7 +28,7 @@ TEXTURES	:=	textures
 SOURCEDIRS	:=	../launcher/source
 SOURCEFILES	:=	init.cpp haxx.cpp installer.cpp \
 				rijndael.c http.cpp sha1.cpp wdvd.cpp \
-				riivolution.cpp riivolution_config.cpp launcher.cpp fwrite.cpp debugprint.cpp
+				riivolution.cpp riivolution_config.cpp launcher.cpp fwrite.cpp debugprint.cpp ssl.cpp
 
 #---------------------------------------------------------------------------------
 # options for code generation
