Add register save/restore functions to kamek for the newer GCC/devkitPPC's -Os. Uncomment as needed.
git-svn-id: svn://japaneatahand.com/rawksd/trunk@239 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/rawksd/kamek/hacks.yaml
+++ b/rawksd/kamek/hacks.yaml
@@ -1,5 +1,5 @@
 ---
-source_files: [hacks.cpp]
+source_files: [hacks.cpp, crtsaves.S]
 hooks:
 -   name:       'Disable SD Card'
     type:       patch
