Riivolution 1.05 release for Wii U

--- a/filemodule/libfile/Makefile.wii
+++ b/filemodule/libfile/Makefile.wii
@@ -97,7 +97,7 @@ export OUTPUT	:=	$(CURDIR)/$(TARGET)
 #---------------------------------------------------------------------------------
 $(BUILD):
 	@[ -d $@ ] || mkdir -p $@
-	@make -C $(BUILD) -f $(CURDIR)/Makefile.wii
+	@+make -C $(BUILD) -f $(CURDIR)/Makefile.wii
 
 #---------------------------------------------------------------------------------
 clean:
